--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
  
     <div class="container">
         <div class="row">
-   
+                <div class="col-xs-7 col-md-8 col-sm-8 col-lg-8">
+ 
+                </div>
+ 
+                <div class="col-xs-5 col-md-4 col-sm-4 col-lg-4">
+     
+                </div>
         </div>
  
  
