adding basic files

--- a/public/main.html
+++ b/public/main.html
@@ -27,6 +27,11 @@
             right: 0px;
             position: fixed;
         }
+         .scroll-debug {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+        }
     </style>
  
 </head>
@@ -34,6 +39,8 @@
 <body>
  
    
+ <div ng-view></div>
+    <script type="text/javascript" src="public/script/angular.js"></script>
  
 </body>
  
