adding basic files

--- a/public/main.html
+++ b/public/main.html
@@ -40,8 +40,11 @@
  
    
  <div ng-view></div>
-    <script type="text/javascript" src="public/script/angular.js"></script>
- 
+<script type="text/javascript" src="public/script/angular.js"></script>
+<script type="text/javascript" src="node-modules/angular-route/angular-route.js"></script>
+
+<script src="cart/cart.js"></script>
+<script src="app.js"></script>
 </body>
  
 </html>
